namespace Panda.PickAndPlace {
    public interface ICommand {
        void Execute();
    }
}