' Copyright (C) 2024 Vincent Schmitt - All Rights Reserved
' You may use, distribute and modify this code under the
' terms of the Educational Community License (ECL), Version 2.0.
' 
' You should have received a copy of the ECL license with
' this file. If not, please write to: schmittv@hs-pforzheim.de,
' or visit: https://opensource.org/licenses/ECL-2.0

@startuml TrajectoryPlanner

' Patterns used:
' * Singelton for ROSConnection
' * Observer for Event handling
' * Command Pattern for Movement commands
' * Strategy Pattern for Gripping operations
' * Factory Pattern for Trajectory requests
' * State Pattern for Robot states

namespace Panda.PickAndPlace {
    enum Poses {
        PreGrasp
        Grasp
        PickUp
        PrePlace
        Place
    }

    enum PlacementState {
        Outside
        InsideFloating
        InsidePlaced
    }

    class TrajectoryPlanner {
        + string rosServiceName
        + GameObject panda
        + GameObject target
        + GameObject targetPlacement
        + GameObject pandaTCP
        + float jointAssignmentWait
        + float poseAssignmentWait
        + float tolerance
        + float upwardsOffset
        + float timeout
        + bool attachOnTouch
        - {static} string[] linkNames
        - Quaternion pickOrientation
        - Vector3 pickPoseOffset
        - float gripperOffset
        - ArticulationBody[] jointArticulationBodies
        - ArticulationBody leftGripper
        - ArticulationBody rightGripper
        - ROSConnection rosServiceName
        - IGripperStrategy gripperStrategy
        ' ---------------------------------------
        + void PublishJoints()
        - void Start()
        - PandaMoveitJointsMsg CurrenctJointState()
        - void TrajectoryResponseHandeler()
        - IEnumerator TrajectoryResponse()
        - void SetGripperStrategy()
        - IEnumerator ExecuteTrajectories()
        - IEnumerator WaitUntilPositionedOverTarget()
    }

    class TargetPlacement {
    }

    class ROSConnection  << (S,red) Singleton >> {
    }

    interface ICommand {
        + void Execute()
    }

    interface IGripperStrategy {
        +void Execute()
    }

    class MoveCommand implements ICommand {
        - ArticulationBody[] jointArticulationBodies
        - float[] targetPositions
        ' ---------------------------------------
        + void Execute()
    }

    class OpenGripperStrategy implements IGripperStrategy {
        +void Execute()
    }

    class CloseGripperStrategy implements IGripperStrategy {
        void Execute()
    }

    class TrajectoryRequestFactory {
        + {static} MoverServiceRequest CreateRequest()
    }
}

namespace Panda.Core {
    class AttachOnTouch {
    }
}

TrajectoryPlanner --> ROSConnection : establishes connection
TrajectoryPlanner --> AttachOnTouch : Attaches target
TrajectoryPlanner --> TargetPlacement : Checks target pos
TrajectoryPlanner --> ICommand : moves robot
TrajectoryPlanner --> IGripperStrategy : Uses
TrajectoryPlanner --> TrajectoryRequestFactory : creates request

@enduml